include/twizzler/rt/core.h

/// Possible init info types
union init_info_ptrs {
    struct comp_init_info *comp;
    struct minimal_init_info *min;
    void *monitor;
};
/// Runtime initialization info.
struct runtime_info {
  int32_t flags;
  /// Discrim. for init_info.
  int32_t kind;
  /// Pointer to args
  char **args;
  /// Number of args
  size_t argc;
  /// Environment pointer
  char **envp;
  union init_info_ptrs init_info;
};