include/twizzler/rt/io.h

enum io_error {
  IoError_Success,
  IoError_Other,
  IoError_SeekError,
  IoError_InvalidDesc,
  IoError_WouldBlock,
};
struct io_result {
  enum io_error error;
  size_t value;
};
typedef uint32_t whence;
typedef uint32_t io_flags;
extern struct io_result twz_rt_fd_read(descriptor fd, void *buf, size_t len, io_flags flags);
extern struct io_result twz_rt_fd_write(descriptor fd, const void *buf, size_t len, io_flags flags);
extern struct io_result twz_rt_fd_seek(descriptor fd, whence whence, int64_t offset);
struct io_vec {
  char *buf;
  size_t len;
};
typedef int64_t optional_offset;
extern struct io_result twz_rt_fd_preadv(descriptor fd, optional_offset offset, const struct io_vec *iovs, size_t nr_iovs, io_flags flags);
extern struct io_result twz_rt_fd_pwritev(descriptor fd, optional_offset offset, const struct io_vec *iovs, size_t nr_iovs, io_flags flags);