rt-abi/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of spawn_args"][::core::mem::size_of::<spawn_args>() - 24usize];
    ["Alignment of spawn_args"][::core::mem::align_of::<spawn_args>() - 8usize];
    ["Offset of field: spawn_args::stack_size"]
        [::core::mem::offset_of!(spawn_args, stack_size) - 0usize];
    ["Offset of field: spawn_args::start"][::core::mem::offset_of!(spawn_args, start) - 8usize];
    ["Offset of field: spawn_args::arg"][::core::mem::offset_of!(spawn_args, arg) - 16usize];
};
pub const spawn_error_Spawn_Success: spawn_error = 0;
pub const spawn_error_Spawn_Other: spawn_error = 1;
pub const spawn_error_Spawn_InvalidArgument: spawn_error = 2;
pub const spawn_error_Spawn_ObjectNotFound: spawn_error = 3;
pub const spawn_error_Spawn_PermissionDenied: spawn_error = 4;
pub const spawn_error_Spawn_KernelError: spawn_error = 5;
pub type spawn_error = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct spawn_result {
    pub id: thread_id,
    pub err: spawn_error,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of spawn_result"][::core::mem::size_of::<spawn_result>() - 8usize];
    ["Alignment of spawn_result"][::core::mem::align_of::<spawn_result>() - 4usize];
    ["Offset of field: spawn_result::id"][::core::mem::offset_of!(spawn_result, id) - 0usize];
    ["Offset of field: spawn_result::err"][::core::mem::offset_of!(spawn_result, err) - 4usize];
};
extern "C-unwind" {
    pub fn twz_rt_spawn_thread(args: spawn_args) -> spawn_result;
}
pub const join_result_Join_Success: join_result = 0;
pub const join_result_Join_ThreadNotFound: join_result = 1;
pub const join_result_Join_Timeout: join_result = 2;
pub type join_result = ::core::ffi::c_uint;
extern "C-unwind" {
    pub fn twz_rt_join_thread(id: thread_id, timeout: option_duration) -> join_result;
}
pub type map_flags = u32;
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct object_handle {
    pub id: rt_objid,
    pub runtime_info: *mut ::core::ffi::c_void,
    pub start: *mut ::core::ffi::c_void,
    pub meta: *mut ::core::ffi::c_void,
    pub map_flags: map_flags,
    pub valid_len: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of object_handle"][::core::mem::size_of::<object_handle>() - 48usize];
    ["Alignment of object_handle"][::core::mem::align_of::<object_handle>() - 16usize];
    ["Offset of field: object_handle::id"][::core::mem::offset_of!(object_handle, id) - 0usize];
    ["Offset of field: object_handle::runtime_info"]
        [::core::mem::offset_of!(object_handle, runtime_info) - 16usize];
    ["Offset of field: object_handle::start"]
        [::core::mem::offset_of!(object_handle, start) - 24usize];
    ["Offset of field: object_handle::meta"]
        [::core::mem::offset_of!(object_handle, meta) - 32usize];
    ["Offset of field: object_handle::map_flags"]
        [::core::mem::offset_of!(object_handle, map_flags) - 40usize];
    ["Offset of field: object_handle::valid_len"]
        [::core::mem::offset_of!(object_handle, valid_len) - 44usize];
};
pub const LEN_MUL: usize = 4096;
pub type descriptor = i32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct open_info {
    pub name: *const ::core::ffi::c_char,
    pub len: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of open_info"][::core::mem::size_of::<open_info>() - 16usize];
    ["Alignment of open_info"][::core::mem::align_of::<open_info>() - 8usize];
    ["Offset of field: open_info::name"][::core::mem::offset_of!(open_info, name) - 0usize];
    ["Offset of field: open_info::len"][::core::mem::offset_of!(open_info, len) - 8usize];
};
pub const open_error_OpenError_Sucess: open_error = 0;
pub const open_error_OpenError_Other: open_error = 1;
pub const open_error_OpenError_LookupFail: open_error = 2;
pub const open_error_OpenError_PermissionDenied: open_error = 3;
pub const open_error_OpenError_InvalidArgument: open_error = 4;
pub type open_error = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct open_result {
    pub fd: descriptor,
    pub error: open_error,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of open_result"][::core::mem::size_of::<open_result>() - 8usize];
    ["Alignment of open_result"][::core::mem::align_of::<open_result>() - 4usize];
    ["Offset of field: open_result::fd"][::core::mem::offset_of!(open_result, fd) - 0usize];
    ["Offset of field: open_result::error"][::core::mem::offset_of!(open_result, error) - 4usize];
};
extern "C-unwind" {
    pub fn twz_rt_fd_open(info: open_info) -> open_result;
}
extern "C-unwind" {
    pub fn twz_rt_fd_close(fd: descriptor);
}
pub const io_error_IoError_Success: io_error = 0;
pub const io_error_IoError_Other: io_error = 1;
pub const io_error_IoError_SeekError: io_error = 2;
pub const io_error_IoError_InvalidDesc: io_error = 3;
pub const io_error_IoError_WouldBlock: io_error = 4;
pub type io_error = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct io_result {
    pub error: io_error,
    pub value: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of io_result"][::core::mem::size_of::<io_result>() - 16usize];
    ["Alignment of io_result"][::core::mem::align_of::<io_result>() - 8usize];
    ["Offset of field: io_result::error"][::core::mem::offset_of!(io_result, error) - 0usize];
    ["Offset of field: io_result::value"][::core::mem::offset_of!(io_result, value) - 8usize];
};
pub type whence = u32;
pub type io_flags = u32;
pub const IO_NONBLOCKING: io_flags = 1;
pub const WHENCE_START: whence = 0;
pub const WHENCE_END: whence = 1;
pub const WHENCE_CURRENT: whence = 2;
extern "C-unwind" {
    pub fn twz_rt_fd_read(
        fd: descriptor,
        buf: *mut ::core::ffi::c_void,
        len: usize,
        flags: io_flags,
    ) -> io_result;
}
extern "C-unwind" {
    pub fn twz_rt_fd_write(
        fd: descriptor,
        buf: *const ::core::ffi::c_void,
        len: usize,
        flags: io_flags,
    ) -> io_result;
}
extern "C-unwind" {
    pub fn twz_rt_fd_seek(fd: descriptor, whence: whence, offset: i64) -> io_result;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct io_vec {
    pub buf: *mut ::core::ffi::c_char,
    pub len: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of io_vec"][::core::mem::size_of::<io_vec>() - 16usize];
    ["Alignment of io_vec"][::core::mem::align_of::<io_vec>() - 8usize];
    ["Offset of field: io_vec::buf"][::core::mem::offset_of!(io_vec, buf) - 0usize];
    ["Offset of field: io_vec::len"][::core::mem::offset_of!(io_vec, len) - 8usize];
};
pub type optional_offset = i64;
pub const FD_POS: optional_offset = -1;
extern "C-unwind" {
    pub fn twz_rt_fd_preadv(
        fd: descriptor,
        offset: optional_offset,
        iovs: *const io_vec,
        nr_iovs: usize,
        flags: io_flags,
    ) -> io_result;
}
extern "C-unwind" {
    pub fn twz_rt_fd_pwritev(
        fd: descriptor,
        offset: optional_offset,
        iovs: *const io_vec,
        nr_iovs: usize,
        flags: io_flags,
    ) -> io_result;
}
pub const map_error_MapError_Success: map_error = 0;
pub const map_error_MapError_Other: map_error = 1;
pub const map_error_MapError_OutOfResources: map_error = 2;
pub const map_error_MapError_NoSuchObject: map_error = 3;
pub const map_error_MapError_PermissionDenied: map_error = 4;
pub const map_error_MapError_InvalidArgument: map_error = 5;
pub type map_error = ::core::ffi::c_uint;
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct map_result {
    pub handle: object_handle,
    pub error: map_error,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of map_result"][::core::mem::size_of::<map_result>() - 64usize];
    ["Alignment of map_result"][::core::mem::align_of::<map_result>() - 16usize];
    ["Offset of field: map_result::handle"][::core::mem::offset_of!(map_result, handle) - 0usize];
    ["Offset of field: map_result::error"][::core::mem::offset_of!(map_result, error) - 48usize];
};
pub const MAP_FLAG_R: map_flags = 1;
pub const MAP_FLAG_W: map_flags = 2;
pub const MAP_FLAG_X: map_flags = 4;
extern "C-unwind" {
    pub fn twz_rt_map_object(id: rt_objid, flags: map_flags) -> map_result;
}
extern "C-unwind" {
    pub fn twz_rt_release_handle(handle: *mut object_handle);
}
extern "C-unwind" {
    pub fn __twz_rt_map_two_objects(
        id_1: rt_objid,
        flags_1: map_flags,
        id_2: rt_objid,
        flags_2: map_flags,
        res_1: *mut map_result,
        res_2: *mut map_result,
    );
}
pub const monotonicity_NonMonotonic: monotonicity = 0;
pub const monotonicity_WeakMonotonic: monotonicity = 1;
pub const monotonicity_StrongMonotonic: monotonicity = 2;
pub type monotonicity = ::core::ffi::c_uint;
extern "C-unwind" {
    pub fn twz_rt_get_monotonic_time() -> duration;
}
extern "C-unwind" {
    pub fn twz_rt_get_system_time() -> duration;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dl_phdr_info {
    pub addr: usize,
    pub name: *const ::core::ffi::c_char,
    pub phdr: *const ::core::ffi::c_void,
    pub phnum: u32,
    pub adds: ::core::ffi::c_ulonglong,
    pub subs: ::core::ffi::c_ulonglong,
    pub tls_modid: usize,
    pub tls_data: *mut ::core::ffi::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of dl_phdr_info"][::core::mem::size_of::<dl_phdr_info>() - 64usize];
    ["Alignment of dl_phdr_info"][::core::mem::align_of::<dl_phdr_info>() - 8usize];
    ["Offset of field: dl_phdr_info::addr"][::core::mem::offset_of!(dl_phdr_info, addr) - 0usize];
    ["Offset of field: dl_phdr_info::name"][::core::mem::offset_of!(dl_phdr_info, name) - 8usize];
    ["Offset of field: dl_phdr_info::phdr"][::core::mem::offset_of!(dl_phdr_info, phdr) - 16usize];
    ["Offset of field: dl_phdr_info::phnum"]
        [::core::mem::offset_of!(dl_phdr_info, phnum) - 24usize];
    ["Offset of field: dl_phdr_info::adds"][::core::mem::offset_of!(dl_phdr_info, adds) - 32usize];
    ["Offset of field: dl_phdr_info::subs"][::core::mem::offset_of!(dl_phdr_info, subs) - 40usize];
    ["Offset of field: dl_phdr_info::tls_modid"]
        [::core::mem::offset_of!(dl_phdr_info, tls_modid) - 48usize];
    ["Offset of field: dl_phdr_info::tls_data"]
        [::core::mem::offset_of!(dl_phdr_info, tls_data) - 56usize];
};
pub type loaded_image_id = u32;
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct loaded_image {
    pub image_handle: object_handle,
    pub image_start: *const ::core::ffi::c_void,
    pub image_len: usize,
    pub dl_info: dl_phdr_info,
    pub id: loaded_image_id,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of loaded_image"][::core::mem::size_of::<loaded_image>() - 144usize];
    ["Alignment of loaded_image"][::core::mem::align_of::<loaded_image>() - 16usize];
    ["Offset of field: loaded_image::image_handle"]
        [::core::mem::offset_of!(loaded_image, image_handle) - 0usize];
    ["Offset of field: loaded_image::image_start"]
        [::core::mem::offset_of!(loaded_image, image_start) - 48usize];
    ["Offset of field: loaded_image::image_len"]
        [::core::mem::offset_of!(loaded_image, image_len) - 56usize];
    ["Offset of field: loaded_image::dl_info"]
        [::core::mem::offset_of!(loaded_image, dl_info) - 64usize];
    ["Offset of field: loaded_image::id"][::core::mem::offset_of!(loaded_image, id) - 128usize];
};
extern "C-unwind" {
    pub fn twz_rt_get_loaded_image(id: loaded_image_id, li: *mut loaded_image) -> bool;
}
